samples/_failures_safe/1761199183_3721cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2cc5de12.c: In function ‘main’:
./samples/SAFE/__tmp_2cc5de12.c:148:5: error: expected declaration or statement at end of input
  148 |     if (decompressed.data == NULL) {
      |     ^~
./samples/SAFE/__tmp_2cc5de12.c:148:5: error: expected declaration or statement at end of input
